# Wesleyan-Birder-API

./: .gitignore  README.md  pyproject.toml  replit.md
app/: auth.py  bird_identifier.py  config.py  main.py  models.py  schemas.py
